06_rect/grade.txt
Grading at Sun 03 Mar 2024 08:34:17 AM UTC
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:51:12: error: expected expression before ‘void’
   51 |     return void;
      |            ^~~~
The code did not compile!

Overall Grade: F
